Fixed: Used extj-all-debug. from main ext4 folder, in Setup, Reports, Quarantine Fixed: cleanup and fix issues in jsp pages for Setup, Reports, Quarantine Fixed: Replaced onRender with afterReady. Fixed: Chart height issue. Works for all themes without need of specail cases,  old issue Fixed: Grid reload issue after export, old issue Fixed: Virus Blocker Email- Scan IMAP bad label in combo (values where uppercase), old issue Fixed: Captive Portal Captive rules error on add second time. is about getDate Fixed: Web Cache Add Cache Bypass rule, error on save Fixed: boxLabel For Combo: TODO: test in IE Fixed: Bandwidth, Rules, Rules Builder, Add Direcoty connector row write directly user name or group name does not work. it takes the value enterd via dialog. old issue Fixed: Bandwidth Issue wtih penalty and Quota box with the same id Fixed: Application Control Light, Signatures save -Marshal Exception.was related to the grid ids issue Fixed: Ad Blocker, Sites save -Marshal Exception, old issue Fixed: Rule Builder Directory, username, user group, time matcher second time is not well rendered, old issue. Also distroy them on exit. Fixed: Open vpn configured as server, Clients, Vpn Vlients and Vpn Sites the distribute client Button si not shown. Fixed: Same For Bandwidth Control Penalty Box and Quotas, remove test data when done. Added test data functions in the framework Fixed: Fix issue with grid rows ids like: Ext.data.Store.ImplicitModel-ext-gen3456-2. Present in Wan Balancer Routes Fixed: Eliminated the grid record id - record generated id confusion by using internalId Fixed: Animation When ading a node, needed to do stopAnimation on node preview Fixed: WAN failover, Tests, Add Row Combo values. it was fas tring to strict compare string with int Fixed: Email Quarantine layout fix Fixed: Enhancement: use a property to hide ApplyButton on some settings windows Fixed: Setup drag and drop icon is half displayed Fixed: Networking window title quater visible Fixed: Alpaca i

--- a/untangle-apache2-config/files/var/www/skins/cammo/css/admin.css
+++ b/untangle-apache2-config/files/var/www/skins/cammo/css/admin.css
@@ -306,11 +306,11 @@ div.node div.node-metrics {
 /* chart container */
 div.node-metrics div.chart {
     position: absolute;
-    top: 0px;
+    top: 7px;
     left: 0px;
     width: 133px;
-    height: 92px;
-    background: transparent url(../images/admin/background_activity_blinger_border.png) no-repeat scroll 4px 7px !important;
+    height: 80px;
+    background: transparent url(../images/admin/background_activity_blinger_border.png) no-repeat scroll 4px 0px !important;
 }
 /* system metrics container */
 div.node-metrics div.system {
@@ -943,6 +943,7 @@ div.button-column {
     width:99%;
     height:16px;
     padding-left: 1px;
+    padding-top: 6px;
     overflow: hidden;
 }
 
